# FileSpliter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/fsi/: integrater.hh  outinfo.hh  spliter.hh
src/: integrater.hh  main.cc  outinfo.hh  parse.hh  run.hh  spliter.hh  terminate.hh
src/integrater/: CMakeLists.txt
